objects/ssot__InvoiceLine__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdjustmentAmount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AdjustmentTaxAmount__c</fullName>
        <label>Adjustment Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AdjustmentWithTaxAmount__c</fullName>
        <label>Adjustment Amount With Tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BalanceAmount__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BillingAddressId__c</fullName>
        <label>Billing Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingScheduleGroupId__c</fullName>
        <label>Billing Schedule Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingScheduleId__c</fullName>
        <label>Billing Schedule</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChargeAmount__c</fullName>
        <label>Charge Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ChargeConvertedNegAmount__c</fullName>
        <label>Charge Converted Neg Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ChargeTaxAmount__c</fullName>
        <label>Charge Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ChargeWithTaxAmount__c</fullName>
        <label>Charge Amount With Tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ConvertedNegAmount__c</fullName>
        <label>Converted Neg Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CorpCurrencyCnvChargeAmount__c</fullName>
        <label>Corp Currency Cnv Charge Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CorporateCurrencyCvsnDate__c</fullName>
        <label>Corporate Currency Cvsn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CorporateCurrencyCvsnRate__c</fullName>
        <label>Corporate Currency Cvsn Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CorporateCurrency__c</fullName>
        <label>Corporate Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Currency__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GroupReferenceEntityItemId__c</fullName>
        <label>Group Reference Entity Item Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GroupReferenceEntityItem__c</fullName>
        <label>Group Reference Entity Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GroupingKey__c</fullName>
        <label>Grouping Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasMultipleItemsText__c</fullName>
        <label>Has Multiple Items</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Invoice line Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceLineEndDate__c</fullName>
        <label>Invoice Line End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceLineReferenceText__c</fullName>
        <label>Invoice Line Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceLineStartDate__c</fullName>
        <label>Invoice Line Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceLineType__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Invoice__c</fullName>
        <label>Invoice Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsUsageBasedInvoiceLineText__c</fullName>
        <label>Is Usage Based Invoice Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LegalEntityAccountingPeriodId__c</fullName>
        <label>Legal Entity Accounting Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LegalEntityId__c</fullName>
        <label>Legal Entity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LineAmount__c</fullName>
        <label>Line Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__NetCreditsAppliedAmount__c</fullName>
        <label>Net Credits Applied</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__NetPaymentsAppliedAmount__c</fullName>
        <label>Net Payments Applied</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OverageUnitOfMeasureText__c</fullName>
        <label>Overage Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductName__c</fullName>
        <label>Product name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceEntityItemId__c</fullName>
        <label>Reference Entity Item Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceEntityItem__c</fullName>
        <label>Reference Entity Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedLineId__c</fullName>
        <label>Related Line</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShippingAddressId__c</fullName>
        <label>Shipping Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxAmount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TaxTreatmentId__c</fullName>
        <label>Tax Treatment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotAppliedCrMemoLineAmount__c</fullName>
        <label>Total Applied Cr Memo Line Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotPymtLineInvLineAppliedAmount__c</fullName>
        <label>Tot Pymt Line Inv Line Applied</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotPymtLineInvLineUappAmount__c</fullName>
        <label>Total Pymt Line Inv Line Uapp</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotUnappliedCrMemoLineAmount__c</fullName>
        <label>Total Unapplied Cr Memo Line Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalConvertedNegAmount__c</fullName>
        <label>Total Converted Neg Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UnitOfMeasureId__c</fullName>
        <label>Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UnitPriceAmount__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UsageOverageQuantity__c</fullName>
        <label>Usage Overage Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UsageProductId__c</fullName>
        <label>Usage product</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>